# bd3m_web_test

./: Cargo.toml  state.json
css/: base.css  main.css
javascript/: main.js
src/: main.rs
src/views/app/: content_loader.rs  items.rs
templates/: main.html
templates/components/: header.html
